<resources>
    <string name="app_name">PaymenToTheTrip</string>
    <string name="amount_of_kilometers">Amount of Kilometers</string>
    <string name="travel_expense">Travel expense</string>
    <string name="kilometers_for_liters">Kilometers for Liters</string>
    <string name="price_for_liters">Price For Liters</string>
    <string name="type_here_the_price">Type here the Price</string>
    <string name="type_here_autonomy">Type here Autonomy</string>
    <string name="type_here">Type here</string>
    <string name="your_total_spend_will_be">Your Total spend will be:</string>
    <string name="r_0">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="calculate">Calculate</string>
    <string name="_0">$ 0</string>
</resources>