<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003060"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/primeiro"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/average"
        android:text="@string/travel_expense"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/segundo"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/average"
        android:text="@string/amount_of_kilometers"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ikmtotal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0sp"
        android:background="@android:color/transparent"
        android:hint="@string/type_here"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A3FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/terceira"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/average"
        android:text="@string/price_for_liters"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ilitro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0sp"
        android:background="@android:color/transparent"
        android:hint="@string/type_here_the_price"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A3FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/quarto"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/average"
        android:text="@string/kilometers_for_liters"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ikmforlit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:hint="@string/type_here_autonomy"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A3FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/quinto"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/average"
        android:text="@string/your_total_spend_will_be"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/txtresult"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/average"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="145dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/calculate"
        android:textColor="@color/white" />


</LinearLayout>